--- a/.config/polybar/polybar/modules.ini
+++ b/.config/polybar/polybar/modules.ini
@@ -1,16 +1,14 @@
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;
-;;	    __  ___          __      __
+;;	    __  ___          __      __         
 ;;	   /  |/  /___  ____/ /_  __/ /__  _____
 ;;	  / /|_/ / __ \/ __  / / / / / _ \/ ___/
-;;	 / /  / / /_/ / /_/ / /_/ / /  __(__  )
-;;	/_/  /_/\____/\__,_/\__,_/_/\___/____/
+;;	 / /  / / /_/ / /_/ / /_/ / /  __(__  ) 
+;;	/_/  /_/\____/\__,_/\__,_/_/\___/____/  
 ;;
 ;; Created By Aditya Shakya @adi1090x
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-; include-file = ~/.config/polybar/powerline.ini
 
 [module/alsa]
 type = internal/alsa
@@ -18,43 +16,66 @@ type = internal/alsa
 format-volume = <label-volume>
 format-volume-background = ${color.mf}
 format-volume-foreground = ${color.fg}
-format-volume-padding = 0
+format-volume-padding = 1
 
 label-volume = %percentage%%
 
 format-muted-background = ${color.mf}
 format-muted-foreground = ${color.red}
-format-muted-padding = 0
+format-muted-padding = 1
 
 label-muted = "Muted"
 label-muted-foreground = ${color.red}
 
+[module/alsa_i]
+type = internal/alsa
+
+format-volume = <ramp-volume>
+format-volume-background = ${color.blue}
+format-volume-foreground = ${color.fg}
+format-volume-padding = 1
+
+format-muted-background = ${color.blue}
+format-muted-foreground = ${color.red}
+format-muted-padding = 1
+
+label-muted = ""
+label-muted-foreground = ${color.fg}
+
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-3 = 
+ramp-volume-4 = 
+ramp-headphones-0 = 
+ramp-headphones-1 = 
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/backlight]
-inherit        = powerline-templates/right-to-left-item
-background = ${color.aqua}
-background-next = ${color.green}
 type = internal/backlight
 
 card = intel_backlight
 
-format =  <label>
+format = <ramp> <label>
 format-background = ${color.aqua}
 format-foreground = ${color.fg}
-format-padding = 0
+format-padding = 1
 
 label = %percentage%%
 enable-scroll = true
 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/battery]
-inherit        = powerline-templates/right-to-left-item
-background = ${color.green}
-background-next = ${color.blue-gray}
-
 type = internal/battery
+
 full-at = 99
 
 battery = BAT0
@@ -62,57 +83,135 @@ adapter = AC
 
 poll-interval = 2
 time-format = %H:%M
-;
-;
-label-charging =  %percentage%%
-label-discharging =  %percentage%%
-;
-label-charging-background = ${color.green}
+
+format-charging = <label-charging>
+format-charging-background = ${color.mf}
+format-charging-foreground = ${color.fg}
+format-charging-padding = 1
+
+format-discharging = <label-discharging>
+format-discharging-background = ${color.mf}
+format-discharging-foreground = ${color.fg}
+format-discharging-padding = 1
+
+label-charging = %percentage%%
+label-discharging = %percentage%%
+
+label-full = Full
+label-full-foreground = ${color.fg}
+label-full-background = ${color.mf}
+label-full-padding = 1
+
+[module/battery_i]
+type = internal/battery
+
+full-at = 99
+battery = BAT0
+adapter = AC
+
+poll-interval = 2
+time-format = %H:%M
+
+format-charging = <animation-charging>
+format-charging-background = ${color.green}
+format-charging-foreground = ${color.fg}
+format-charging-padding = 1
+
+format-discharging = <ramp-capacity>
+format-discharging-background = ${color.orange}
+format-discharging-foreground = ${color.fg}
+format-discharging-padding = 1
+
+label-charging = %percentage%%
+label-discharging = %percentage%%
+
+label-full = 
 label-full-background = ${color.green}
-label-discharging-background = ${color.green}
-;
-label-full =  %percentage%%
+label-full-foreground = ${color.fg}
+label-full-padding = 1
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-5 = 
+ramp-capacity-6 = 
+ramp-capacity-7 = 
+ramp-capacity-8 = 
+ramp-capacity-9 = 
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-5 = 
+animation-charging-6 = 
+animation-charging-7 = 
+animation-charging-8 = 
+
+animation-charging-framerate = 750
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/cpu]
-inherit        = powerline-templates/right-to-left-item
-background = ${color.teal}
-background-next = ${color.fg}
 type = internal/cpu
 
 interval = 0.5
 
-format =  <label>
+format = <label>
+format-background = ${color.mf}
+format-foreground = ${color.fg}
+format-padding = 1
+
+label = "%percentage%%"
+
+[module/cpu_i]
+type = internal/cpu
+
+interval = 0.5
+
+format = 
 format-background = ${color.teal}
 format-foreground = ${color.fg}
-format-padding = 0
+format-padding = 1
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/date]
-inherit        = powerline-templates/right-to-left-item
-background = ${color.blue}
-background-next = ${color.red}
 type = internal/date
 
 interval = 5.0
 
-time = " %d-%b  %I:%M "
+time = %d-%b | %I:%M
 time-alt = %Y-%m-%d%
+
+format = <label>
+format-background = ${color.mf} 
+format-foreground = ${color.fg}
+format-padding = 1
+ 
+label = %time%
+
+[module/date_i]
+type = internal/date
+
+interval = 60.0
+
+time = 
+time-alt = 
 
 format = <label>
 format-background = ${color.blue}
 format-foreground = ${color.fg}
-format-padding = 0
-
+format-padding = 1
+ 
 label = %time%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/filesystem]
-inherit        = powerline-templates/right-to-left-item
-background = ${color.aqua}
 type = internal/fs
 
 mount-0 = /
@@ -120,14 +219,14 @@ interval = 10
 fixed-values = true
 
 format-mounted = <label-mounted>
-format-mounted-background = ${color.mf}
+format-mounted-background = ${color.mf} 
 format-mounted-foreground = ${color.fg}
-format-mounted-padding = 0
+format-mounted-padding = 1
 
 format-unmounted = <label-unmounted>
-format-unmounted-background = ${color.mf}
+format-unmounted-background = ${color.mf} 
 format-unmounted-foreground = ${color.fg}
-format-unmounted-padding = 0
+format-unmounted-padding = 1
 
 label-mounted = "%free%"
 label-unmounted = %mountpoint%: not mounted
@@ -140,14 +239,14 @@ interval = 10
 fixed-values = true
 
 format-mounted = 
-format-mounted-background = ${color.green}
+format-mounted-background = ${color.green} 
 format-mounted-foreground = ${color.fg}
-format-mounted-padding = 0
+format-mounted-padding = 1
 
 format-unmounted = 
-format-unmounted-background = ${color.red}
+format-unmounted-background = ${color.red} 
 format-unmounted-foreground = ${color.fg}
-format-unmounted-padding = 0
+format-unmounted-padding = 1
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -178,62 +277,67 @@ format-unmounted-padding = 0
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/bspwm]
-inherit        = powerline-templates/right-to-left-item
-background = ${color.aqua}
 type = internal/bspwm
 
 label-focused = %index%
 label-focused-foreground = ${color.fg}
 label-focused-background = ${color.ac}
 label-focused-underline = ${color.ac}
-label-focused-padding = 0
+label-focused-padding = 1
 
 label-occupied = %index%
 label-occupied-foreground = ${color.fg}
 label-occupied-background = ${color.mf}
 label-occupied-underline = ${color.mf}
-label-occupied-padding = 0
+label-occupied-padding = 1
 
 # Hide empty
-label-empty =
+label-empty = 
 label-empty-padding = 0
 
 label-urgent = %index%!
 label-urgent-foreground = ${color.fg}
 label-urgent-background = ${color.red}
-label-urgent-padding = 0
+label-urgent-padding = 1
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/memory]
-inherit        = powerline-templates/right-to-left-item
-background = ${color.yellow}
-background-next = ${color.teal}
 type = internal/memory
 
 interval = 3
 
-format =  <label>
-format-background = ${color.yellow}
+format = <label>
+format-background = ${color.mf} 
 format-foreground = ${color.fg}
-format-padding = 0
+format-padding = 1
 
 label = "%percentage_used%%"
+
+[module/memory_i]
+type = internal/memory
+
+interval = 3
+
+format = 
+format-background = ${color.yellow} 
+format-foreground = ${color.fg}
+format-padding = 1
+
+label = %percentage_used%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/mpd]
-inherit        = powerline-templates/right-to-left-item
-background = ${color.aqua}
 type = internal/mpd
 
 interval = 2
 
 format-online = <label-song> <icon-next>
 format-online-background = ${color.mf}
-format-online-padding = 0
+format-online-padding = 1
 
 label-song =  "%artist% - %title%"
 label-song-maxlen = 20
@@ -253,16 +357,13 @@ interval = 2
 
 format-online = <toggle>
 format-online-background = ${color.red}
-format-online-padding = 0
+format-online-padding = 1
 icon-play = 
 icon-pause = 
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/network]
-inherit        = powerline-templates/right-to-left-item
-background = ${color.purple}
-background-next = ${color.yellow}
 type = internal/network
 
 interface = wlp6s0
@@ -271,18 +372,38 @@ interval = 1.0
 accumulate-stats = true
 unknown-as-up = true
 
-format-connected = <ramp-signal> <label-connected>
-format-connected-background = ${color.purple}
+format-connected = <label-connected>
+format-connected-background = ${color.mf}
 format-connected-foreground = ${color.fg}
-format-connected-padding = 0
-
+format-connected-padding = 1
+ 
 format-disconnected = <label-disconnected>
-format-disconnected-background = ${color.purple}
+format-disconnected-background = ${color.mf}
 format-disconnected-foreground = ${color.fg}
-format-disconnected-padding = 0
+format-disconnected-padding = 1
 
 label-connected = "%downspeed%"
 label-disconnected = "Disconnected"
+
+[module/network_i]
+type = internal/network
+interface = wlp6s0
+
+interval = 1.0
+accumulate-stats = true
+unknown-as-up = true
+
+format-connected = <ramp-signal>
+format-connected-background = ${color.purple}
+format-connected-foreground = ${color.fg}
+format-connected-padding = 1
+ 
+format-disconnected = <label-disconnected>
+format-disconnected-background = ${color.purple}
+format-disconnected-foreground = ${color.fg}
+format-disconnected-padding = 1
+
+label-disconnected = 
 
 ramp-signal-0 = 
 ramp-signal-1 = 
@@ -293,24 +414,34 @@ ramp-signal-4 = 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/pulseaudio]
-inherit        = powerline-templates/right-to-left-item
-background = ${color.red}
-background-next = ${color.aqua}
 type = internal/pulseaudio
 
-sink = alsa_output.pci-0000_00_1b.0.analog-stereo
+sink = alsa_output.pci-0000_12_00.3.analog-stereo
 use-ui-max = true
 
 interval = 5
 
-format-volume = "<ramp-volume> <label-volume> "
+format-volume = <label-volume>
+format-volume-background = ${color.mf}
+format-volume-foreground = ${color.fg}
+format-volume-padding = 1
+
+label-muted = Muted
+format-muted-background = ${color.mf}
+format-muted-foreground = ${color.fg}
+format-muted-padding = 1
+
+[module/pulseaudio_i]
+type = internal/alsa
+
+format-volume = <ramp-volume>
 format-volume-background = ${color.red}
 format-volume-foreground = ${color.fg}
-format-volume-padding = 0
+format-volume-padding = 1
 
 format-muted-background = ${color.red}
 format-muted-foreground = ${color.fg}
-format-muted-padding = 0
+format-muted-padding = 1
 
 label-muted = ""
 label-muted-foreground = ${color.fg}
@@ -326,8 +457,6 @@ ramp-headphones-1 = 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/temperature]
-inherit        = powerline-templates/right-to-left-item
-background = ${color.aqua}
 type = internal/temperature
 
 interval = 0.5
@@ -339,12 +468,12 @@ units = true
 format = <label>
 format-background = ${color.mf}
 format-foreground = ${color.fg}
-format-padding = 0
+format-padding = 1
 
 format-warn = <label-warn>
 format-warn-background = ${color.mf}
 format-warn-foreground = ${color.red}
-format-warn-padding = 0
+format-warn-padding = 1
 
 label = %temperature-c%
 label-warn = "%temperature-c%"
@@ -361,12 +490,12 @@ units = true
 format = <ramp>
 format-background = ${color.cyan}
 format-foreground = ${color.fg}
-format-padding = 0
+format-padding = 1
 
 format-warn = <ramp>
 format-warn-background = ${color.cyan}
 format-warn-foreground = ${color.fg}
-format-warn-padding = 0
+format-warn-padding = 1
 
 ramp-0 = 
 ramp-1 = 
@@ -377,15 +506,12 @@ ramp-4 = 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/keyboard]
-inherit        = powerline-templates/right-to-left-item
-background = ${color.blue-gray}
-background-next = ${color.purple}
 type = internal/xkeyboard
 
-format =  <label-layout> <label-indicator>
-format-background = ${color.blue-gray}
+format = <label-layout> <label-indicator>
+format-background = ${color.mf}
 format-foreground = ${color.fg}
-format-padding = 0
+format-padding = 1
 
 label-layout = %layout%
 label-indicator = %name%
@@ -393,6 +519,17 @@ label-indicator-foreground = ${color.fg}
 label-indicator-on-numlock = 
 label-indicator-on-capslock = 
 
+[module/keyboard_i]
+type = internal/xkeyboard
+
+blacklist-0 = caps lock
+blacklist-1 = num lock
+blacklist-2 = scroll lock
+
+format =  
+format-background = ${color.blue-gray}
+format-foreground = ${color.fg}
+format-padding = 1
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -448,10 +585,10 @@ label-empty = %icon%
 label-empty-foreground = ${color.fg}
 label-empty-background = ${color.mf}
 
-label-active-padding = 0
-label-urgent-padding = 0
-label-occupied-padding = 0
-label-empty-padding = 0
+label-active-padding = 1
+label-urgent-padding = 1
+label-occupied-padding = 1
+label-empty-padding = 1
 
 [module/i3]
 type = internal/i3
@@ -485,74 +622,58 @@ enable-scroll = true
 ; Default: true
 wrapping-scroll = true
 
-; Set the scroll cycle direction
+; Set the scroll cycle direction 
 ; Default: true
 reverse-scroll = false
 
-; Use fuzzy (partial) matching on labels when assigning
+; Use fuzzy (partial) matching on labels when assigning 
 ; icons to workspaces
-; Example: code;♚ will apply the icon to all workspaces
+; Example: code;♚ will apply the icon to all workspaces 
 ; containing 'code' in the label
 ; Default: false
 fuzzy-match = true
 
-;label-focused = %name%
-;label-unfocused = %name%
-;label-visible = %name%
-;label-urgent = %name%
+label-focused = %name%
+label-unfocused = %name%
+label-visible = %name%
+label-urgent = %name%
 
 format = <label-state> <label-mode>
-;label-focused-background = ${color.yellow}
-;label-focused-padding = 1
-;
-;label-unfocused-background = ${color.mf}
-;label-unfocused-padding = 1
-;
-;label-urgent-background = ${color.red}
-;label-urgent-padding = 1
-;
-;label-separator = |
-;label-separator-padding = 0
+label-focused-background = ${color.yellow}
+label-focused-padding = 1
 
-label-mode-padding          = 0
-label-mode                  = "%{B#802929 F#1d2021}%mode%%{B#1d2021 F#802929}"
+label-unfocused-background = ${color.mf}
+label-unfocused-padding = 1
 
-label-focused-padding       = 0
-label-focused               = "%{B#d65d0e F#1d2021}%{B#d65d0e F#ffffff} %name% %{B#1d2021 F#d65d0e}"
+label-urgent-background = ${color.red}
+label-urgent-padding = 1
 
-label-unfocused-padding     = ${self.label-focused-padding}
-label-unfocused             = "%{B#d5c4a1 F#1d2021}%{B#d5c4a1 F#1d2021} %name% %{B#1d2021 F#d5c4a1}"
+label-separator = |
+label-separator-padding = 0
 
-label-visible-padding       = ${self.label-focused-padding}
-label-visible               = "%{B#4f6a5a F#1d2021}%{B#4f6a5a F#FFFFFF} %name% %{B#1d2021 F#4f6a5a}"
-
-label-urgent-padding        = ${self.label-focused-padding}
-label-urgent                = "%{B#802929 F#1d2021}%{B#802929 F#ffffff} %name% %{B#1d2021 F#802929}"
 
 [module/pulseaudio-control]
 type = custom/script
-inherit        = powerline-templates/right-to-left-item
-background = ${color.red}
-background-next = ${color.aqua}
 tail = true
-format-underline = ${color.red}
-label-background = ${color.red}
-label-foreground = ${color.fg}
+format-underline = ${colors.cyan}
+label-padding = 2
+label-foreground = ${colors.fg}
 # Icons mixed from Font Awesome 5 and Material Icons
 # You can copy-paste your options for each possible action, which is more
 # trouble-free but repetitive, or apply only the relevant ones (for example
 # --sink-blacklist is only needed for next-sink).
-exec = pulseaudio-control --icons-volume "," --icon-muted " " --sink-nickname "alsa_output.pci-0000_00_1b.0.analog-stereo/analog-output-speaker: " --sink-nickname "alsa_output.pci-0000_00_1b.0.analog-stereo/analog-output-headphones: " listen
+exec = pulseaudio-control --icons-volume " , " --icon-muted " " --sink-nicknames-from "device.description" --sink-nickname "alsa_output.pci-0000_00_1b.0.analog-stereo:  Speakers" --sink-nickname "alsa_output.usb-Kingston_HyperX_Virtual_Surround_Sound_00000000-00.analog-stereo:  Headphones" listen
 click-right = exec pavucontrol &
 click-left = pulseaudio-control togmute
+click-middle = pulseaudio-control --sink-blacklist "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra2" next-sink
 scroll-up = pulseaudio-control --volume-max 130 up
 scroll-down = pulseaudio-control --volume-max 130 down
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
-;;	  / __/ / / / / /_
-;;	 / /___/ /_/ / __/
-;;	/_____/\____/_/
+;;	  / __/ / / / / /_    
+;;	 / /___/ /_/ / __/    
+;;	/_____/\____/_/       
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;
