--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -57,24 +57,27 @@ glx-copy-from-front = false;
 # Enabled client-side shadows on windows.
 shadow = true;
 # The blur radius for shadows. (default 12)
-shadow-radius = 5;
+shadow-radius = 15;
 # The left offset for shadows. (default -15)
-shadow-offset-x = 0;
-# The top offset for shadows. (default -15)
-shadow-offset-y = 0;
-# The translucency for shadows. (default .75)
+shadow-offset-x = -15;
+## The top offset for shadows. (default -15)
+shadow-offset-y = -15;
+## The translucency for shadows. (default .75)
 shadow-opacity = 1;
 
 # Set if you want different colour shadows
-# shadow-red = 0.0;
+shadow-red = 0.2;
 # shadow-green = 0.0;
-# shadow-blue = 0.0;
+shadow-blue = 0.2;
 
 # The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
 # This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
 shadow-exclude = [
     "! name~=''",
+    "!focused",
+    "name = 'polybar'",
+    "name = 'Polybar'",
     "name = 'Notification'",
     "name = 'Plank'",
     "name = 'Docky'",
@@ -86,6 +89,14 @@ shadow-exclude = [
     "name *= 'Chrome'",
     "name = 'cpt_frame_window'",
     "class_g = 'Firefox' && argb",
+    "class_g = 'firefox' && argb",
+    "class_g = 'polybar'",
+    "class_g = 'Polybar'",
+    "class_g = 'firefox'",
+    "class_g = 'Firefox'",
+    "class_g = 'dota2'",
+    "class_g = 'Dota2'",
+    "class_g = 'Dota2 (steam)'",
     "class_g = 'Conky'",
     "class_g = 'Kupfer'",
     "class_g = 'Synapse'",
@@ -96,9 +107,9 @@ shadow-exclude = [
     "class_g ?= 'zoom'",
     "_GTK_FRAME_EXTENTS@:c",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
-];
+    ];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
-shadow-ignore-shaped = false;
+# shadow-ignore-shaped = false;
 
 #################################
 #
@@ -106,23 +117,32 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-inactive-opacity = 0.5;
-active-opacity = 0.95;
-frame-opacity = 1;
-inactive-opacity-override = false;
+    inactive-opacity = 0.8;
+    active-opacity = 0.95;
+    frame-opacity = 0.7;
+    inactive-opacity-override = false;
 
 #You can use opacity rules to set the opacity
 #for certain programs
-opacity-rule= [ 
-	"80:class_g = 'URxvt'",
-	"100:class_g = 'Firefox' && focused",
-	"100:class_g = 'neovide'&& focused",
-	"99:class_g ?= 'sublime_text' && focused",
-    "99:class_g ?= 'zeal' && focused",
-    "99:class_g ?= 'org.gnome.Nautilus' && focused",
-    "99:class_g = 'com.github.babluboy.bookworm' && focused",
-    "99:class_g ?='Rofi'",	
-];
+    opacity-rule= [
+        "0:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_HIDDEN'",
+        "80:class_g = 'URxvt'",
+        "100:class_g = 'Code'",
+        "100:class_g = 'code'",
+        "100:class_g = 'Firefox'",
+        "100:class_g = 'firefox'",
+        "100:class_g = 'google-chrome'",
+        "100:class_g = 'Google-chrome'",
+        "100:class_g = 'dota2'",
+        "100:class_g = 'Dota 2'",
+        "100:class_g = 'Dota 2 (steam)'",
+        "100:class_g = 'neovide'&& focused",
+        "99:class_g ?= 'sublime_text' && focused",
+        "99:class_g ?= 'zeal' && focused",
+        "99:class_g ?= 'org.gnome.Nautilus' && focused",
+        "99:class_g = 'com.github.babluboy.bookworm' && focused",
+        "99:class_g ?='Rofi'",
+    ];
 
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
@@ -136,12 +156,28 @@ blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 
-# Add blur effect 
-blur-kern = "7x7box";
+# Add blur effect
+# blur-kern = "7x7box";
+
+blur: {
+# requires: https://github.com/ibhagwan/picom
+          method = "dual_kawase";
+#method = "kernel";
+          strength = 7;
+#deviation = 1.0;
+          kernel = "11x11gaussian";
+          background = false;
+          background-frame = false;
+          background-fixed = false;
+#kern = "3x3box";
+      }
 
 # Do not let blur radius adjust based on window opacity.
 blur-background-fixed = false;
 blur-background-exclude = [
+    "class_g = 'Code' && argb",
+    "class_g = 'code' && argb",
+    "class_g = 'Firefox' && argb",
     "window_type = 'dock'",
     "window_type = 'desktop'"
 ];
@@ -155,7 +191,7 @@ blur-background-exclude = [
 # Fade windows during opacity changes.
 fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 4;
+fade-delta = 2;
 # Opacity change between steps while fading in. (default 0.028).
 fade-in-step = 0.03;
 # Opacity change between steps while fading out. (default 0.03).
@@ -180,7 +216,7 @@ fade-exclude = [ ];
 # Usually more reliable but depends on a EWMH-compliant WM.
 #use-ewmh-active-win = true;
 # Detect rounded corners and treat them as rectangular when --shadow-ignore-shaped is on.
-#detect-rounded-corners = true;
+# detect-rounded-corners = true;
 
 # Detect _NET_WM_OPACITY on client windows, useful for window managers not passing _NET_WM_OPACITY of client windows to frame windows.
 # This prevents opacity being ignored for some apps.
@@ -189,7 +225,7 @@ fade-exclude = [ ];
 
 # Specify refresh rate of the screen.
 # If not specified or 0, compton will try detecting this with X RandR extension.
-refresh-rate = 0;
+refresh-rate = 60;
 
 # Vertical synchronization: match the refresh rate of the monitor
 vsync = true;
@@ -226,16 +262,16 @@ wintypes:
 {
     tooltip =
     {
-        # fade: Fade the particular type of windows.
-        fade = true;
-        # shadow: Give those windows shadow
+# fade: Fade the particular type of windows.
+        fade = false;
+# shadow: Give those windows shadow
         shadow = false;
-        # opacity: Default opacity for the type of windows.
+# opacity: Default opacity for the type of windows.
         opacity = 0.95;
-        # focus: Whether to always consider windows of this type focused.
+# focus: Whether to always consider windows of this type focused.
         focus = true;
     };
-    popup_menu = { opacity = 0.8; };
+    popup_menu = { opacity = 0.95; };
 };
 
 ######################
@@ -248,3 +284,4 @@ wintypes:
 # Use X Sync fence to sync clients' draw calls. Needed on nvidia-drivers with GLX backend for some users.
 xrender-sync-fence = true;
 
+# corner-radius = 10
