--- a/.config/polybar/polybar/tester-file-2.ini
+++ b/.config/polybar/polybar/tester-file-2.ini
@@ -1,3 +1,4 @@
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;
 ;;	    ____        __      __              
 ;;	   / __ \____  / /_  __/ /_  ____ ______
@@ -26,9 +27,8 @@ margin-top = 0
 ;; File Inclusion
 ; include an external file, like module file, etc.
 
-include-file = ~/.config/polybar/powerline.ini
 include-file = ~/.config/polybar/colors.ini
-include-file = ~/.config/polybar/modules.ini.new
+include-file = ~/.config/polybar/modules.ini
 include-file = ~/.config/polybar/user_modules.ini
 include-file = ~/.config/polybar/bars.ini
 
@@ -36,17 +36,12 @@ include-file = ~/.config/polybar/bars.ini
 
 ;; Bar Settings
 
-[bar/hdmi]
-inherit = bar/main
-
-monitor = HDMI1
-
 [bar/main]
 ; Use either of the following command to list available outputs:
 ; If unspecified, the application will pick the first one it finds.
 ; $ polybar -m | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
-monitor = eDP1
+monitor =
 
 ; Use the specified monitor as a fallback if the main one is not found.
 monitor-fallback =
@@ -57,7 +52,7 @@ monitor-strict = false
 
 ; Tell the Window Manager not to configure the window.
 ; Use this to detach the bar if your WM is locking its size/position.
-;override-redirect = false
+override-redirect = true
 
 ; Put the bar at the bottom of the screen
 bottom = false
@@ -70,18 +65,17 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 18
+height = 22
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in an offset in the x or y direction 
 ; of 50% minus 10 pixels
 offset-x = 0
-offset-y = 0
+offset-y = 80
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
-; background = ${color.bg}
-background = #1d2021
+background = ${color.bg}
 
 ; Foreground ARGB color (e.g. #f00, #ff992a, #ddff1023)
 foreground = ${color.fg}
@@ -122,7 +116,7 @@ border-color = ${color.bg}
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding = 0
+padding = 1
 
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
@@ -130,13 +124,45 @@ padding = 0
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = "Iosevka:Regular:size=11;3"
-font-1 = "icomoon\-feather:size=11;3"
+; Fonts are defined using <font-name>;<vertical-offset>
+; Font names are specified using a fontconfig pattern.
+;   font-0 = NotoSans-Regular:size=8;2
+;   font-1 = MaterialIcons:size=10
+;   font-2 = Termsynu:size=8;-1
+;   font-3 = FontAwesome:size=10
+; See the Fonts wiki page for more details
 
-#modules-left = bspwm separator mpd_i mpd separator
-modules-left = i3
-modules-center =  title
-modules-right = cpu memory network keyboard battery backlight pulseaudio-control date arrowSeparator
+font-0 = "Ubuntu Condensed:size=10;2"
+font-1 = "icomoon\-feather:size=10;2"
+;font-1 = "icomoon-feather:size=10;2"
+font-2 = "xos4 Terminus:size=12;2"
+
+; Modules are added to one of the available blocks
+;   modules-left = cpu ram
+;   modules-center = xwindow xbacklight
+;   modules-right = ipc clock
+
+;; Available modules
+;;
+;alsa backlight battery
+;bspwm cpu date
+;filesystem github i3
+;memory mpd wired-network
+;network pulseaudio temperature
+;keyboard title workspaces
+;;
+;; User modules
+;checknetwork updates window_switch launcher powermenu sysmenu menu
+;;
+;; Bars
+;cpu_bar memory_bar filesystem_bar mpd_bar 
+;volume brightness battery_bar 
+
+;modules-left = i3 separator mpd_i mpd separator powermenu_i powermenu
+;modules-center =  title
+;modules-right = alsa_i alsa separator battery_i battery separator network_i network separator date_i date
+
+modules-center = cpu_bar_i cpu_bar separator memory_bar_i memory_bar separator filesystem_bar_i filesystem_bar separator mpd_bar_i mpd_bar separator volume_i volume separator brightness_i brightness separator battery_bar_i battery_bar 
 
 ; The separator will be inserted between the output of each module
 separator =
@@ -167,7 +193,7 @@ locale =
 ;   center
 ;   right
 ;   none
-tray-position = right
+tray-position = none
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
@@ -186,7 +212,7 @@ tray-transparent = false
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 ; By default the tray container will use the bar
 ; background color.
-tray-background = ${color.mf}
+tray-background = ${color.bg}
 
 ; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 tray-offset-x = 0
@@ -207,8 +233,7 @@ tray-scale = 1.0
 ; Currently supported WM's:
 ;   bspwm
 ;   i3 (requires: `override-redirect = true`)
-wm-restack = i3
-override-redirect = false
+; wm-restack =
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
